Clear tab attention if disposing of the pending dialog.

BUG=784532
TEST=as in bug

Change-Id: Idfb75b985ed74f22c7742d830d39846c36fd5266
Reviewed-on: https://chromium-review.googlesource.com/767570
Reviewed-by: Sidney San Martín <sdy@chromium.org>
Commit-Queue: Avi Drissman <avi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#516603}
Former-commit-id: 83abf42cc8c96453d30702b7cd91553ad2e4329d